--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TERMIN</title>
-  <link rel="stylesheet" href="termin.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="hero">
@@ -28,6 +28,6 @@
       </div>
     </div>
   </div>
-  <script src="termin.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
