Made an input so that everyone can use.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
   <div class="hero">
     <h1>Termin Countdown</h1>
+    <h2>Hvornår skal det ske?</h2>
+    <input id="datetimeInput" type="datetime-local">
     <div class="timebox">
       <div class="time">
         <h2 id="days">00</h2>
