det hedder nu termintælleren

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="hero">
-    <h1>Termin Countdown</h1>
+    <h1>Termintælleren</h1>
     <h2>Hvornår skal det ske?</h2>
     <input id="datetimeInput" type="datetime-local">
     <div class="timebox">
